2013-04-06  Jerzy Dyrda  <jerzdy@gmail.com>

	* include/var_io_eth.h: 
	* include/var_io.h: Update ETH macros for F4 device. [ Bugzilla 1001219 ]

2013-01-19  John Dallaway  <john@dallaway.org.uk>

	* include/var_io.h: Fix CYGHWR_HAL_STM32_UART6 definition.

2012-04-23  James Smith  <jsmith@ecoscentric.com>

	* include/var_io_pins.h (CYGHWR_HAL_STM32_PIN_IN): Removed
	spurious parameter since the API for this macro should match the
	F2/F4 (HIPERFORMANCE) definition.

	* include/var_io_eth.h: Update F1 ETH_MII
	CYGHWR_HAL_STM32_PIN_IN() usage to reflect correct API.

2012-04-13  Christophe Coutand  <ecos@hotmail.co.uk>

	* include/var_io.h:
	Added definitions, CYGHWR_HAL_STM32_USB_CLOCK, 
	CYGHWR_HAL_STM32_CAN1_CLOCK and CYGHWR_HAL_STM32_CAN2_CLOCK 

2012-03-27  James Smith  <jsmith@ecoscentric.com>

	* tests/timers.c (TIMER_PRI): Add macro and manifests to allow
	easy manipulation of the base and delta between the timer
	priorities being tested.

2012-03-23  James Smith  <jsmith@ecoscentric.com>

	* include/var_io_usart.h: Provide common/shared UART pin
	definitions for F1, F2 and F4 devices using the new PIN wrapper
	macros. The RTS pin definitions for all STM32F families now use
	GPIO output since the driver uses software controlled
	RTS. Previously the F2/F4 defined the RTS pins as ALTFN.

	* include/var_io.h: Provide common/shared ADC pin definitions for
	F1, F2 and F4 devices using the new PIN_ANALOG() wrapper macro.

	* include/var_io_eth.h: Provide common MII pin definitions using
	the new PIN wrapper macros. Also remove MII_REMAP which was
	incorrectly using the wrong manifests (STM3210C-EVAL networking
	would not work) since decision taken that "plf_io.h" should
	contain board specific I/O pin mapping.

	* cdl/hal_cortexm_stm32.cdl: Remove CYGPKG_HAL_STM32_ETH and
	sub-option CYGHWR_HAL_STM32_ETH_MII_REMAP since ethernet pin
	mapping now present in platform specific "plf_io.h" header.

2012-03-22  James Smith  <jsmith@ecoscentric.com>
